--- a/Moon-Rabbits-Dream-About-Virtual.theme.css
+++ b/Moon-Rabbits-Dream-About-Virtual.theme.css
@@ -50,7 +50,7 @@
     --name-bg: #d95b72;
 
     /* Background Colors & BG Image */
-    --bg-gradient1: #e297b2;
+    --bg-gradient1: #f7e6ee;
     --bg-gradient2: #ffe8f5;
     --bg-gradient3: #f58ebc;
     --bg-image: none; /* Write the image url, example url("your url") [none is default]*/
